--- a/LAIG TP1/TP3/reader/index.html
+++ b/LAIG TP1/TP3/reader/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>CGFexample</title>
+    <title>MOD X</title>
 
 <style>
 body, html {
